--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+    <string name="google_browser_key">AIzaSyD-zGdGwq3kmBlgXipYTuUUNoEBuXYC6DQ</string>
 </resources>
